language/move-lang/tests/move_check/parser/function_type_missing_angle.exp
error: 

   ┌── tests/move_check/parser/function_type_missing_angle.move:3:7 ───
   │
 3 │     fn<T1, T2 () { }
   │               ^ Expected '>'
   ·
 3 │     fn<T1, T2 () { }
   │       - To match this '<'
   │

